kyberkucharka-frontend/src/styles/windows.css
.floating-window {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
  color: rgba(255, 255, 255, 0.87);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1;
}

.floating-window-content {
  background: black;
  padding: 20px;
  border-radius: 5px;
  text-align: center;
  display: flex;
  flex-direction: column;
  font-size: larger;

  max-width: 100%;
  max-height: 100%;
  overflow-y: auto;
}

.floating-window-content > * {
  margin-top: 20px;
  margin: auto;
}

.floating-window-content form > * {
  margin-top: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.floating-window-content p {
  margin-top: 20px;
}

.floating-window-content label {
  font-size: 24px;
}

.floating-window-content input, .floating-window-content select, .floating-window-content textarea   {
  margin: 10px;
  font-size: 24px;
  font-family: KyberFontSimple;
}

.floating-window-content textarea {
  resize: none;
  width: 15em;
}

.floating-window-content a {
  display: inline-block;
  color: rgba(255, 255, 255, 0.87);
  font-weight: 500;
}

.floating-window-content a:hover { 
  transform: rotate(4deg) scale(1.05);
}

